--- a/index.html
+++ b/index.html
@@ -21,9 +21,48 @@
     </nav>
     <main>
         <section id="Weather" class="view">
-            <form>
-            <input type="text" id="cityInput" placeholder="Enter city name" />
-            </form>
+
+                <div class="weather-dashboard">
+                    <div class="weather-left">
+                    <form>
+                        <input type="text" id="cityInput" placeholder="Enter city name" />
+                    </form>
+                    <div class="today">
+                        <p class="section-title">TODAY'S FORECAST</p>
+                        <ul class="hourly-forecast">
+                        <li><span>09:00</span><br><img src="assets/sun.png" alt="sun" /><br>28°C</li>
+                        <li><span>12:00</span><br><img src="assets/cloud.png" alt="cloud" /><br>30°C</li>
+                        <li><span>15:00</span><br><img src="assets/rain.png" alt="rain" /><br>27°C</li>
+                        <li><span>18:00</span><br><img src="assets/sun.png" alt="sun" /><br>25°C</li>
+                        <li><span>21:00</span><br><img src="assets/moon.png" alt="moon" /><br>22°C</li>
+                        </ul>
+                    </div>
+                    <div class="air-conditions">
+                        <p class="section-title">AIR CONDITIONS</p>
+                        <ul>
+                        <li>Air Quality: 9.2</li>
+                        <li>Feels Like: 30°C</li>
+                        <li>Wind: 10 km/h</li>
+                        <li>UV Index: 5</li>
+                        <li>Humidity: 60%</li>
+                        <li>Visibility: 10 km</li>
+                        </ul>
+                    </div>
+                    </div>
+                    <!-- Right Column -->
+                    <div class="weather-right">
+                    <p class="section-title">7-DAY FORECAST</p>
+                    <ul class="weekly-forecast">
+                        <li>Mon<br><img src="assets/sun.png" alt="sun" /><br>28°C / 20°C</li>
+                        <li>Tue<br><img src="assets/cloud.png" alt="cloud" /><br>27°C / 19°C</li>
+                        <li>Wed<br><img src="assets/rain.png" alt="rain" /><br>25°C / 18°C</li>
+                        <li>Thu<br><img src="assets/sun.png" alt="sun" /><br>29°C / 21°C</li>
+                        <li>Fri<br><img src="assets/moon.png" alt="moon" /><br>26°C / 18°C</li>
+                        <li>Sat<br><img src="assets/sun.png" alt="sun" /><br>30°C / 22°C</li>
+                        <li>Sun<br><img src="assets/cloud.png" alt="cloud" /><br>28°C / 20°C</li>
+                    </ul>
+                    </div>
+                </div>
 
 
         </section>
