--- a/index.html
+++ b/index.html
@@ -24,30 +24,33 @@
 
                 <div class="weather-dashboard">
                     <div class="weather-left">
-                    <form>
-                        <input type="text" id="cityInput" placeholder="Enter city name" />
-                    </form>
-                    <div class="today">
-                        <p class="section-title">TODAY'S FORECAST</p>
-                        <ul class="hourly-forecast">
-                        <li><span>09:00</span><br><img src="assets/sun.png" alt="sun" /><br>28°C</li>
-                        <li><span>12:00</span><br><img src="assets/cloud.png" alt="cloud" /><br>30°C</li>
-                        <li><span>15:00</span><br><img src="assets/rain.png" alt="rain" /><br>27°C</li>
-                        <li><span>18:00</span><br><img src="assets/sun.png" alt="sun" /><br>25°C</li>
-                        <li><span>21:00</span><br><img src="assets/moon.png" alt="moon" /><br>22°C</li>
-                        </ul>
-                    </div>
-                    <div class="air-conditions">
-                        <p class="section-title">AIR CONDITIONS</p>
-                        <ul>
-                        <li>Air Quality: 9.2</li>
-                        <li>Feels Like: 30°C</li>
-                        <li>Wind: 10 km/h</li>
-                        <li>UV Index: 5</li>
-                        <li>Humidity: 60%</li>
-                        <li>Visibility: 10 km</li>
-                        </ul>
-                    </div>
+                        <form>
+                            <input type="text" id="cityInput" placeholder="Enter city name" />
+                        </form>
+                        <div class="today">
+                            <p class="section-title">TODAY'S FORECAST</p>
+                            <ul class="hourly-forecast">
+                            <li><span>06:00</span><br><img src="assets/sun.png" alt="sun" /><br>28°C</li>
+                            <li><span>9:00</span><br><img src="assets/cloud.png" alt="cloud" /><br>30°C</li>
+                            <li><span>12:00</span><br><img src="assets/rain.png" alt="rain" /><br>27°C</li>
+                            <li><span>15:00</span><br><img src="assets/sun.png" alt="sun" /><br>25°C</li>
+                            <li><span>18:00</span><br><img src="assets/moon.png" alt="moon" /><br>22°C</li>
+                            </ul>
+                        </div>
+                        <div class="air-conditions">
+                            <p class="section-title">AIR CONDITIONS</p>
+                            <ul class="conditions-list">
+                            <li><span class="label">Temperature</span><span class="value">30°C</span></li>
+                            <li><span class="label">Air Quality</span><span class="value">9.2</span></li>
+                            <li><span class="label">Feels Like</span><span class="value">30°C</span></li>
+                            <li><span class="label">Wind</span><span class="value">10 km/h</span></li>
+                            <li><span class="label">UV Index</span><span class="value">5</span></li>
+                            <li><span class="label">Humidity</span><span class="value">60%</span></li>
+                            <li><span class="label">Visibility</span><span class="value">10 km</span></li>
+                            <li><span class="label">Rain Probability</span><span class="value">32%</span></li>
+                            <li><span class="label">Pressure</span><span class="value">108 ph</span></li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- Right Column -->
                     <div class="weather-right">
