--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
     <title>Weather</title>
 </head>
 
@@ -70,12 +73,11 @@
 
         </section>
         <section id="Map" class="view hidden">
-            <h2>Map View</h2>
-            <p>Map content goes here.</p>
+            <!-- <h2>Map View</h2> -->
+            <div id="map"></div>
         </section>
         <section id="Settings" class="view hidden">
             <h2>Settings</h2>
-            <p>Settings content goes here.</p>
         </section>
     </main>
 
