--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
                         <div class="today">
                             <p class="section-title">TODAY'S FORECAST</p>
                             <ul class="hourly-forecast">
-                            <li><span>06:00</span><br><img src="assets/sun.png" alt="sun" /><br>28°C</li>
-                            <li><span>9:00</span><br><img src="assets/cloud.png" alt="cloud" /><br>30°C</li>
-                            <li><span>12:00</span><br><img src="assets/rain.png" alt="rain" /><br>27°C</li>
-                            <li><span>15:00</span><br><img src="assets/sun.png" alt="sun" /><br>25°C</li>
-                            <li><span>18:00</span><br><img src="assets/moon.png" alt="moon" /><br>22°C</li>
+                            <li><span>06:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
+                            <li><span>9:00</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
+                            <li><span>12:00</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
+                            <li><span>15:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
+                            <li><span>18:00</span><br><img src="" alt="moon" /><br><span class="value">--</span></li>
                             </ul>
                         </div>
                         <div class="air-conditions">
                             <p class="section-title">AIR CONDITIONS</p>
                             <ul class="conditions-list">
-                            <li><span class="label">Temperature</span><span class="value">30°C</span></li>
-                            <li><span class="label">Air Quality</span><span class="value">9.2</span></li>
-                            <li><span class="label">Feels Like</span><span class="value">30°C</span></li>
-                            <li><span class="label">Wind</span><span class="value">10 km/h</span></li>
-                            <li><span class="label">UV Index</span><span class="value">5</span></li>
-                            <li><span class="label">Humidity</span><span class="value">60%</span></li>
-                            <li><span class="label">Visibility</span><span class="value">10 km</span></li>
-                            <li><span class="label">Rain Probability</span><span class="value">32%</span></li>
-                            <li><span class="label">Pressure</span><span class="value">108 ph</span></li>
+                            <li><span class="label">Temperature</span><span class="value">--</span></li>
+                            <li><span class="label">Air Quality</span><span class="value">--</span></li>
+                            <li><span class="label">Feels Like</span><span class="value">--</span></li>
+                            <li><span class="label">Wind</span><span class="value">--</span></li>
+                            <li><span class="label">UV Index</span><span class="value">--</span></li>
+                            <li><span class="label">Humidity</span><span class="value">--</span></li>
+                            <li><span class="label">Visibility</span><span class="value">--</span></li>
+                            <li><span class="label">Rain Probability</span><span class="value">--</span></li>
+                            <li><span class="label">Pressure</span><span class="value">--</span></li>
                             </ul>
                         </div>
                     </div>
@@ -59,13 +59,13 @@
                     <div class="weather-right">
                     <p class="section-title">7-DAY FORECAST</p>
                     <ul class="weekly-forecast">
-                        <li>Mon<br><img src="assets/sun.png" alt="sun" /><br>28°C / 20°C</li>
-                        <li>Tue<br><img src="assets/cloud.png" alt="cloud" /><br>27°C / 19°C</li>
-                        <li>Wed<br><img src="assets/rain.png" alt="rain" /><br>25°C / 18°C</li>
-                        <li>Thu<br><img src="assets/sun.png" alt="sun" /><br>29°C / 21°C</li>
-                        <li>Fri<br><img src="assets/moon.png" alt="moon" /><br>26°C / 18°C</li>
-                        <li>Sat<br><img src="assets/sun.png" alt="sun" /><br>30°C / 22°C</li>
-                        <li>Sun<br><img src="assets/cloud.png" alt="cloud" /><br>28°C / 20°C</li>
+                        <li>Mon<br><img src="" alt="sun" /><br><span>--</span></li>
+                        <li>Tue<br><img src="" alt="cloud" /><br><span>--</span></li>
+                        <li>Wed<br><img src="" alt="rain" /><br><span>--</span></li>
+                        <li>Thu<br><img src="" alt="sun" /><br><span>--</span></li>
+                        <li>Fri<br><img src="" alt="moon" /><br><span>--</span></li>
+                        <li>Sat<br><img src="" alt="sun" /><br><span>--</span></li>
+                        <li>Sun<br><img src="" alt="cloud" /><br><span>--</span></li>
                     </ul>
                     </div>
 
