got all the data

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <li><span class="label">UV Index</span><span class="value">--</span></li>
                             <li><span class="label">Humidity</span><span class="value">--</span></li>
                             <li><span class="label">Visibility</span><span class="value">--</span></li>
-                            <li><span class="label">Rain Probability</span><span class="value">--</span></li>
+                            <li><span class="label">Precipitation</span><span class="value">--</span></li>
                             <li><span class="label">Pressure</span><span class="value">--</span></li>
                             </ul>
                         </div>
