--- a/index.html
+++ b/index.html
@@ -33,25 +33,24 @@
                         <div class="today">
                             <p class="section-title">TODAY'S FORECAST</p>
                             <ul class="hourly-forecast">
-                            <li><span>06:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
-                            <li><span>9:00</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
-                            <li><span>12:00</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
-                            <li><span>15:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
-                            <li><span>18:00</span><br><img src="" alt="moon" /><br><span class="value">--</span></li>
+                            <li><span class="time">06:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
+                            <li><span class="time">9:00</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
+                            <li><span class="time">12:00</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
+                            <li><span class="time">15:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
                             </ul>
                         </div>
                         <div class="air-conditions">
                             <p class="section-title">AIR CONDITIONS</p>
                             <ul class="conditions-list">
-                            <li><span class="label">Temperature</span><span class="value">--</span></li>
-                            <li><span class="label">Air Quality</span><span class="value">--</span></li>
-                            <li><span class="label">Feels Like</span><span class="value">--</span></li>
-                            <li><span class="label">Wind</span><span class="value">--</span></li>
-                            <li><span class="label">UV Index</span><span class="value">--</span></li>
-                            <li><span class="label">Humidity</span><span class="value">--</span></li>
-                            <li><span class="label">Visibility</span><span class="value">--</span></li>
-                            <li><span class="label">Precipitation</span><span class="value">--</span></li>
-                            <li><span class="label">Pressure</span><span class="value">--</span></li>
+                            <li><span class="label">Temperature</span><span class="value" id="temp-value">--</span></li>
+                            <li><span class="label">Air Quality</span><span class="value" id="air-quality-value">--</span></li>
+                            <li><span class="label">Feels Like</span><span class="value" id="feels-like-value">--</span></li>
+                            <li><span class="label">Wind</span><span class="value" id="wind-value">--</span></li>
+                            <li><span class="label">UV Index</span><span class="value" id="uv-index-value">--</span></li>
+                            <li><span class="label">Humidity</span><span class="value" id="humidity-value">--</span></li>
+                            <li><span class="label">Visibility</span><span class="value" id="visibility-value">--</span></li>
+                            <li><span class="label">Precipitation</span><span class="value" id="precipitation-value">--</span></li>
+                            <li><span class="label">Pressure</span><span class="value" id="pressure-value">--</span></li>
                             </ul>
                         </div>
                     </div>
@@ -59,13 +58,13 @@
                     <div class="weather-right">
                     <p class="section-title">7-DAY FORECAST</p>
                     <ul class="weekly-forecast">
-                        <li>Mon<br><img src="" alt="sun" /><br><span>--</span></li>
-                        <li>Tue<br><img src="" alt="cloud" /><br><span>--</span></li>
-                        <li>Wed<br><img src="" alt="rain" /><br><span>--</span></li>
-                        <li>Thu<br><img src="" alt="sun" /><br><span>--</span></li>
-                        <li>Fri<br><img src="" alt="moon" /><br><span>--</span></li>
-                        <li>Sat<br><img src="" alt="sun" /><br><span>--</span></li>
-                        <li>Sun<br><img src="" alt="cloud" /><br><span>--</span></li>
+                        <li><span class="day-name">Mon</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
+                        <li><span class="day-name">Tue</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
+                        <li><span class="day-name">Wed</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
+                        <li><span class="day-name">Thu</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
+                        <li><span class="day-name">Fri</span><br><img src="" alt="moon" /><br><span class="value">--</span></li>
+                        <li><span class="day-name">Sat</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
+                        <li><span class="day-name">Sun</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
                     </ul>
                     </div>
 
