recently searched added

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <div class="today">
                             <p class="section-title">TODAY'S FORECAST</p>
                             <ul class="hourly-forecast">
-                            <li><span class="time">06:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
-                            <li><span class="time">9:00</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
-                            <li><span class="time">12:00</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
-                            <li><span class="time">15:00</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
+                            <li><span class="time">--</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
+                            <li><span class="time">--</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
+                            <li><span class="time">--</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
+                            <li><span class="time">--</span><br><img src="" alt="sun" /><br><span class="value">--</span></li>
                             </ul>
                         </div>
                         <div class="air-conditions">
@@ -66,6 +66,13 @@
                         <li><span class="day-name">Sat</span><br><img src="" alt="cloud" /><br><span class="value">--</span></li>
                         <li><span class="day-name">Sun</span><br><img src="" alt="rain" /><br><span class="value">--</span></li>
                     </ul>
+                    </div>
+
+                    <div class="recent-searches">
+                        <ul id="recentSearchesList">
+                            <!-- recently searched places will be added here -->
+                        </ul>
+
                     </div>
 
                 </div>
