unit conversion functionality

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 
                 <label for="tempUnit">Temperature:</label>
                 <select id="tempUnit" class="unit-dropdown">
-                    <option value="metric">Celsius (°C)</option>
+                    <option value="metric" selected>Celsius (°C)</option>
                     <option value="imperial">Fahrenheit (°F)</option>
                 </select>
 
                 <label for="distanceUnit">Distance:</label>
                 <select id="distanceUnit" class="unit-dropdown">
-                    <option value="km">Kilometers</option>
+                    <option value="km" selected>Kilometers</option>
                     <option value="mi">Miles</option>
                     <option value="m">Meters</option>
                 </select>
@@ -117,7 +117,7 @@
                 <label for="windUnit">Wind Speed:</label>
                 <select id="windUnit" class="unit-dropdown">
                     <option value="m/s">m/s</option>
-                    <option value="km/h">km/h</option>
+                    <option value="km/h" selected>km/h</option>
                     <option value="knots">knots</option>
                 </select>
             </div>
